--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"id": "obsidian-canvas-filter",
+	"name": "Canvas Filter Plugin",
+	"version": "0.9.0",
+	"minAppVersion": "1.1.9",
+	"description": "This plugin lets you filter Canvas to only show items of specific color or only connected to currently selected",
+	"author": "Ivan Koshelev",
+	"authorUrl": "https://ikoshelev.azurewebsites.net/",
+	"fundingUrl": "https://github.com/IKoshelev/Obsidian-Canvas-Filter",
 	"isDesktopOnly": false
 }
