--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "obsidian-canvas-filter",
-	"name": "Canvas Filter Plugin",
-	"version": "0.9.0",
+	"id": "canvas-filter",
+	"name": "Canvas Filter",
+	"version": "0.9.1",
 	"minAppVersion": "1.1.9",
-	"description": "This plugin lets you filter Canvas to only show items of specific color, tags or only connected to currently selected",
+	"description": "This plugin lets you filter Canvas to only show items of specific color, tags or only connected to currently selected node.",
 	"author": "Ivan Koshelev",
 	"authorUrl": "https://ikoshelev.azurewebsites.net/",
 	"fundingUrl": "https://github.com/IKoshelev/Obsidian-Canvas-Filter",
